# tracking_bag

./: Readme.md
database/: db.sql
docs/: ~$Presentacion_junction_2019.pptx
importing_to_db/: 01.sh  file_baggage.csv  file_customer.csv  file_events.csv  start.sh
php_server/html/: .htaccess  ca.pem  customerId.php  incidences.php  index.php  locFolders.php  trackbag.php
php_server/html/assets/css/: style.css
php_server/html/assets/js/: incidences.js  trackbag.js
php_server/html/assets/videos/: throwing_baggage.webm  throwing_baggage1.webm
php_server/html/webservices/: general_webservice.php
php_server/private/: db_config.php  smarty_init.inc.php
php_server/private/classes/: GeneraldbCommunications.php
php_server/private/helperFunctions/: dataFunctions.php  formFunctions.php
php_server/private/smarty/templates/: footer.tpl  general_foot.tpl  general_head.tpl  header.tpl  incidences.tpl  index.tpl  trackbag.tpl
php_server/private/smarty/templates_c/: 0ead44bdaadbfb2c930cd2628076ad72e1ef4716_0.file.header.tpl.php  12283f46d33d25425c23256d73d4984c469c1d9d_0.file.footer.tpl.php  3104d1b809b76c78d8bbcf17de4bae1783e8b0f2_0.file.general_foot.tpl.php  3f130a991cb60221b8b05b47c3f48e5007174cb9_0.file.trackbag.tpl.php  3fb5650e4374245298d44cf7ab95861d920e8b9c_0.file.general_head.tpl.php  573e7c5c8093c87d87e2d5009971b4ab287ee739_0.file.index.tpl.php  (+1 more)
video_recognition/: pyproject.toml
video_recognition/suitcase_detection/: __main__.py  suitcase_detection.py
video_recognition/yolo-coco/: test.py
(+1 files in other folders)
