[tool.poetry]
name = "tracking_bag"
version = "0.1.0"
description = ""
authors = ["Ana Jimenez <anajimenez@quibim.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"
opencv-python = "^4.1"
imutils = "^0.5.3"
scikit-learn = "^0.21.3"
colormath = "^3.0"
requests = "^2.22"

[tool.poetry.dev-dependencies]
matplotlib = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
